<resources>
    <string name="app_name">Kosandra</string>
    //Названия вкладок
    <string name="title_client">Клиент</string>
    <string name="title_material">Материалы</string>
    <string name="title_income_expenses">Доходы/Расходы</string>
    <string name="title_financial_statistics">Расписание</string>

    //Приветсвие при запуске приложения
    <string name="greeting_good_morning">Доброе утро, Александра!</string>
    <string name="greeting_good_afternoon">Добрый день, Александра!</string>
    <string name="greeting_good_evening">Добрый вечер, Александра!</string>
    <string name="greeting_good_night">Доброй ночи, Александра!</string>
    <string-array name="quotes_array">
        <item>"Чем тяжелее подъём, тем прекраснее вид с вершины\". Ник Вуйчич</item>
        <item>«Чтобы достичь успеха, перестаньте гнаться за деньгами, гонитесь за мечтой». Тони Шей</item>
        <item>«Даже если вы проходите через ад, продолжайте идти». Уинстон Черчилль</item>
        <item>«Многие люди терпят неудачу только потому, что сдаются в двух шагах от успеха». Саймон Хартли</item>
        <item>«Успешные люди делают то, что неуспешные не хотят делать. Не стремитесь, чтобы было легче, стремитесь, чтобы было лучше». Джим Рон</item>
        <item>Осуществляйте свои мечты, или кто-то наймет вас для осуществления своих». Фарра Грей</item>
        <item>«Всегда помните о том, что ваша решимость преуспеть важнее всего остального». Авраам Линкольн</item>
        <item>«Я твердо верю в удачу, и я заметил: чем больше я работаю, тем я удачливее». Томас Джефферсон</item>
        <item>«Пока у тебя есть попытка – ты не проиграл». Сергей Бубка</item>
        <item>«Я этого хочу. Значит, это будет». Генри Форд</item>
        <item>«Я не терпел поражений. Я просто нашёл 10 000 способов, которые не работают». Томас Эдисон</item>
        <item>«Делай сегодня то, что другие не хотят, завтра будешь жить так, как другие не могут». Джаред Лето</item>
        <item>«Лучший способ взяться за что-то — перестать говорить и начать делать». Уолт Дисней</item>
        <item>«Многое кажется невозможным, пока ты этого не сделаешь». Нельсон Мандела</item>
        <item>«Каждый раз нужно прыгать со скалы и отращивать крылья по пути вниз». Рэй Брэдбери</item>
        <item>«Чтобы дойти до цели, человеку нужно только одно. Идти». Оноре де Бальзак</item>
        <item>«Если ты не собираешься идти до конца, зачем ты вообще это делаешь?». Джо Намат</item>
    </string-array>

    //Названия используемых фрагментов для навигации
    <string name="title_new_client">Новый клиент</string>
    <string name="title_client_card">Карта клиента</string>
    <string name="title_information_visit">Информация о посещении</string>
    <string name="title_materials_add">Добавление материала</string>
    <string name="title_materials_card">Карта материала</string>
    <string name="add_records">Добавление записи</string>

    //Текст используемый во вклажке клиета, добавления, изменения
    <string name="name_surname">Имя Фамилия:</string>
    <string name="phone">Номер телефона:</string>
    <string name="birthday">Дата рождения:</string>
    <string name="hair_length">Длина волос:</string>
    <string name="hair_color">Цвет волос:</string>
    <string name="hair_density">Густота волос:</string>
    <string name="speak_client">О чем говорили с клиентом?</string>
    <string name="count_visit">Кол. посещений:</string>
    <string name="list_hairstyle">Список сделанных причесок:</string>
    <string name="visit"> посещение: </string>
    <string name="what_talking">О чем говорили:</string>
    <string name="null_text">0</string>

    //Названия меню
    <string name="delete">Удалить</string>
    <string name="save">Сохранить</string>
    <string name="edit">Изменить</string>
    <string name="add_hairstyle">Добавить прическу</string>
    <string name="edit_hairstyle">Изменить прическу</string>
    <string name="add">Добавить</string>

    //Текст в вкладках карте прически, добавление, изменение
    <string name="name_hairstyle">Название прически:</string>
    <string name="date_visit">Дата посещения:</string>
    <string name="time_complete_hairstyle">Время выполнения прически:</string>
    <string name="price_hairstyle">Цена прически:</string>
    <string name="price_materials">Цена материала:</string>
    <string name="weight_materials">Вес материала:</string>
    <string name="time_complete_hairstyle_1">Время выполнения:</string>
    <string name="count_use_materials">Сколько материала затрачено:</string>
    <string name="use_material">Использованный материал:</string>
    <string name="photo">Фото</string>
    <string name="minus">-</string>
    <string name="plus">+</string>

    //Текст используемый во вкладке материалы
    <string name="type_material">Тип материала:</string>
    <string name="code_material">Код материала:</string>
    <string name="color_material">Цвет материала:</string>
    <string name="price">Цена:</string>
    <string name="count">Количество:</string>
    <string name="type_kanekalon">Тип канекалона:</string>
    <string name="manufacture">Производитель:</string>
    <string name="type_curl">Вид завитка:</string>
    <string name="length_curls">Длина кудрей:</string>
    <string-array name="type_material">
        <item>Канекалон</item>
        <item>Кудри</item>
        <item>Термоволокно</item>
    </string-array>
    <string-array name="type_kanekalon_type_material">
        <item>Взрослый</item>
        <item>Детский</item>
    </string-array>
    <string-array name="type_manufacture_material">
        <item>Kami-Kami</item>
        <item>Аида</item>
        <item>Easy Braids</item>
        <item>Вау Джау</item>
    </string-array>
    <string-array name="type_curls_material">
        <item>Ариэль</item>
        <item>Джессика</item>
        <item>Бразильки</item>
        <item>Моника</item>
    </string-array>
    <string-array name="type_length_material">
        <item>25</item>
        <item>40</item>
        <item>60</item>
        <item>80</item>
    </string-array>

    //Текст используемый в статистике финансов
    <string name="most_profitable_hairstyle">Самая прибыльная прическа:</string>
    <string name="most_popular_hairstyle">Самая популярная прическа:</string>
    <string name="name_hairstyle_income">Название прически</string>
    <string name="do_hair">Сделано причесок</string>
    <string name="avg_price">Средняя цена</string>
    <string name="expenses_type">Затраты</string>
    <string name="spent">Сумма</string>
    <string name="what_income">Что принесло доход</string>
    <string name="cost">Стоимость</string>
    <string name="data">Дата</string>
    <string name="date_expenses">Дата покупки</string>
    <string name="title_dialog_add_expenses">Добавление раcхода</string>
    <string name="title_dialog_add_income">Добавление дохода</string>
    <string name="income">Доход</string>
    <string name="come_income">Принесло доход</string>
    <string name="enter_range">Выбрать период</string>
    <string name="from">От</string>
    <string name="before">До</string>
    <string name="now">Сейчас</string>
    <string-array name="type_expenses">
        <item>Материал</item>
        <item>Инструмент</item>
        <item>Рабочее место</item>
        <item>Аренда</item>
        <item>Украшения</item>
        <item>Уход</item>
        <item>Обучение</item>
        <item>Реклама</item>
    </string-array>
    <string-array name="type_income">
        <item>Украшения</item>
        <item>Уход за прической</item>
        <item>Другое</item>
    </string-array>

    //Текст для записи
    <string name="time_visit">Время</string>
    <string name="info_visit">Информация о посещении:</string>
    <string name="name">Имя</string>
    <string name="hairstyle">Прическа</string>
    <string name="search">Поиск</string>
    <string name="sorted">Сортировка</string>
    <string name="sort_name">По имени</string>
    <string name="sort_visit">По посещению</string>
    <string name="sort_title">По названию</string>
    <string name="sort_count">По количеству</string>
    <string name="sort_popular">По популярности</string>

</resources>