<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/margin_padding_twenty_five">

    <ImageView
        style="@style/ImageDialogBottom"
        app:srcCompat="@drawable/ic_dialog_line"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/edit_client_image"
        android:layout_width="@dimen/layout_width_circle_photo"
        android:layout_height="@dimen/layout_height_circle_photo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_three"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_photo_add"
        app:civ_border_color="@color/blue_200"
        app:civ_border_width="2dp" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:rowCount="7">

        <TextView
            style="@style/TextViewGridLayout"
            android:text="@string/name_surname"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            style="@style/TextViewGridLayout"
            android:text="@string/phone"
            app:layout_column="0"
            app:layout_row="1" />

        <TextView
            style="@style/TextViewGridLayout"
            android:text="@string/birthday"
            app:layout_column="0"
            app:layout_row="2" />

        <TextView
            style="@style/TextViewGridLayout"
            android:text="@string/hair_length"
            app:layout_column="0"
            app:layout_row="3" />

        <TextView
            style="@style/TextViewGridLayout"
            android:text="@string/color_material"
            app:layout_column="0"
            app:layout_row="4" />

        <TextView
            style="@style/TextViewGridLayout"
            android:text="@string/hair_density"
            app:layout_column="0"
            app:layout_row="5" />

        <TextView
            style="@style/TextViewGridLayout"
            android:text="@string/count_visit"
            app:layout_column="0"
            app:layout_row="6" />

        <EditText
            android:id="@+id/et_edit_name_client"
            style="@style/EditTextGridLayout"
            android:hint="@string/name_surname"
            android:inputType="textCapWords|textMultiLine"
            app:layout_column="1"
            app:layout_row="0"
            android:autofillHints="username"/>

        <EditText
            android:id="@+id/et_edit_phone_client"
            style="@style/EditTextGridLayout"
            android:hint="@string/phone"
            android:inputType="phone"
            app:layout_column="1"
            app:layout_row="1"
            android:autofillHints="number"/>

        <EditText
            android:id="@+id/et_edit_birthday_client"
            style="@style/EditTextGridLayout"
            android:clickable="true"
            android:focusable="false"
            android:hint="@string/birthday"
            android:inputType="date"
            app:layout_column="1"
            app:layout_row="2"
            android:autofillHints="date"/>

        <EditText
            android:id="@+id/et_edit_length_client"
            style="@style/EditTextGridLayout"
            android:hint="@string/hair_length"
            android:inputType="number"
            app:layout_column="1"
            app:layout_row="3"
            android:autofillHints="number"/>

        <EditText
            android:id="@+id/et_edit_color_client"
            style="@style/EditTextGridLayout"
            android:hint="@string/hair_color"
            android:inputType="textCapSentences|textMultiLine"
            app:layout_column="1"
            app:layout_row="4"
            android:autofillHints="text"/>

        <EditText
            android:id="@+id/et_edit_density_client"
            style="@style/EditTextGridLayout"
            android:hint="@string/hair_density"
            android:inputType="textCapSentences|textMultiLine"
            app:layout_column="1"
            app:layout_row="5"
            android:autofillHints="text"/>

        <EditText
            android:id="@+id/et_edit_count_visit_client"
            style="@style/EditTextGridLayout"
            android:hint="@string/null_text"
            android:inputType="number"
            app:layout_column="1"
            app:layout_row="6"
            android:autofillHints="number"/>
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        style="@style/TextViewGridLayout"
        android:layout_gravity=""
        android:text="@string/what_talking" />

    <EditText
        android:id="@+id/et_edit_talking_client"
        style="@style/EditTextGridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/speak_client"
        android:inputType="textCapSentences|textMultiLine"
        android:autofillHints="text"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/save_edit_client"
        style="@style/CustomFloatingActionButton"
        app:srcCompat="@drawable/ic_menu_save"
        android:contentDescription="@string/save"/>

</LinearLayout>